Usando getConstructor